--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     </header>
     <main>
       <ul class = lista>
-        <li><a href="ColorClick.html">Color Click</a></li>
+        <li><a href="Clilc_color/ColorClick.html">Color Click</a></li>
+        <li><a href="Perfiles/perfiles.html">Visualizacion de perfil</a></li>
       </ul>
     </main>
   </body>
